--- a/visualizer.ipynb
+++ b/visualizer.ipynb
@@ -18,7 +18,8 @@
     "import sqlite3\n",
     "import cv2\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import os"
    ]
   },
   {
@@ -58,18 +59,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Annotating image: annotated_images//20251129_152106.jpg-00.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-01.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-02.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-03.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-04.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-05.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-06.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-07.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-08.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-09.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-10.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-11.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-12.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-13.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-14.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-15.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-16.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-17.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-18.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-19.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-20.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-21.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-22.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-23.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-24.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-25.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-26.jpg\n",
+      "Annotating image: annotated_images//20251129_152106.jpg-27.jpg\n",
       "FINISHED\n"
      ]
     }
    ],
    "source": [
+    "# Set variables for this run\n",
     "database_path = 'sam3_detections.sqlite3'\n",
     "sql = 'select * from detections order by image_path, confidence desc;'\n",
+    "annotated_image_dir = 'annotated_images/'\n",
     "\n",
+    "# Ensure existence of output directory\n",
+    "os.makedirs(annotated_image_dir, exist_ok=True)\n",
+    "\n",
+    "# Read detections from the database\n",
     "conn = sqlite3.connect(database_path)\n",
     "df = pd.read_sql_query(sql, conn)\n",
     "conn.close()\n",
     "\n",
+    "# Annotate images based on detections (one image per detection)\n",
+    "# Images are saved as new files with -XX.jpg suffix where XX is the order returned by the SQL query.\n",
     "for i, r in df.iterrows():\n",
     "    original_image_path = r['image_path']\n",
     "    x_min = int(r['x_min'])\n",
@@ -80,9 +117,15 @@
     "    polygon_points = np.array(eval(polygon_points_str), np.int32)          \n",
     "    polygon_points = [polygon_points.reshape((-1, 1, 2))]\n",
     "    color = (0, 0, 255)  # Red color in BGR\n",
-    "    annotated_image_path = f'{original_image_path}-{i:02d}.jpg'    \n",
+    "    annotated_image_path = f'{annotated_image_dir}/{original_image_path}-{i:02d}.jpg' \n",
+    "    print(f'Annotating image: {annotated_image_path}')   \n",
     "    img_annotated = annotate_image_with_polygon_and_rectangle(original_image_path, x_min, y_min, x_max, y_max, polygon_points, color)\n",
     "    cv2.imwrite(annotated_image_path, img_annotated)\n",
+    "    \n",
+    "    # Write .txt file describing the annotated image. May be used in a caption later.\n",
+    "    txt_path = f'{annotated_image_path}.txt'\n",
+    "    with open(txt_path, 'w') as f:\n",
+    "        f.write(f'confidence: {r[\"confidence\"]:.3f} object_index: {r[\"object_index\"]}\\n')\n",
     "    \n",
     "print('FINISHED')"
    ]
