--- a/sam3-2026-01-31.ipynb
+++ b/sam3-2026-01-31.ipynb
@@ -58,7 +58,7 @@
      "text": [
       "/home/aubrey/Desktop/sam3-2026-01-31/.venv/lib/python3.13/site-packages/torch/__init__.py:1146: FutureWarning: `torch.distributed.reduce_op` is deprecated, please use `torch.distributed.ReduceOp` instead\n",
       "  return isinstance(obj, torch.Tensor)\n",
-      "/tmp/ipykernel_342516/4068954168.py:19: FutureWarning: `torch.distributed.reduce_op` is deprecated, please use `torch.distributed.ReduceOp` instead\n",
+      "/tmp/ipykernel_357073/4068954168.py:19: FutureWarning: `torch.distributed.reduce_op` is deprecated, please use `torch.distributed.ReduceOp` instead\n",
       "  elif hasattr(obj, \"data\") and torch.is_tensor(obj.data):\n"
      ]
     }
@@ -123,37 +123,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "0f320692",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": [
-    "def visualize_objects(results)->None:\n",
-    "\n",
-    "    for r in results:\n",
-    "        for i, mask in enumerate(r.masks.xy):\n",
-    "            # 1. Create a binary mask\n",
-    "            img = r.orig_img.copy()\n",
-    "            b_mask = np.zeros(img.shape[:2], np.uint8)\n",
-    "            contour = mask.astype(np.int32).reshape(-1, 1, 2)\n",
-    "            cv2.drawContours(b_mask, [contour], -1, (255, 255, 255), cv2.FILLED)\n",
-    "\n",
-    "            # 2. Isolate object (black background)\n",
-    "            mask3ch = cv2.cvtColor(b_mask, cv2.COLOR_GRAY2BGR)\n",
-    "            isolated = cv2.bitwise_and(mask3ch, img)\n",
-    "\n",
-    "            # 3. Crop to bounding box\n",
-    "            x1, y1, x2, y2 = r.boxes.xyxy[i].cpu().numpy().astype(np.int32)\n",
-    "            iso_crop = isolated[y1:y2, x1:x2]\n",
-    "\n",
-    "            # 4. Show or save\n",
-    "            cv2.imwrite(f\"Object_{i}.jpg\", iso_crop)\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "a5dae28e",
@@ -211,7 +180,7 @@
     "        mode=\"predict\",\n",
     "        model=\"sam3.pt\",\n",
     "        half=True,  # Use FP16 for faster inference\n",
-    "        save=False,  # Save image visualizing output results\n",
+    "        save=True,  # Save image visualizing output results\n",
     "        save_txt=False,  # Save output results in text format\n",
     "        save_conf=False,  # Save confidence scores   \n",
     "        imgsz=1932,  # Adjusted image size from 1920 to meet stride 14 requirement\n",
@@ -365,73 +334,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "467e658d",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": [
-    "# from https://gemini.google.com/app/3e54d5041ca47e02\n",
-    "\n",
-    "import torch\n",
-    "\n",
-    "def find_max_imgsz(model, device, stride=32, min_val=128, max_val=4096):\n",
-    "    \"\"\"\n",
-    "    Finds the maximum image size (imgsz) a GPU can handle before OOM.\n",
-    "    \"\"\"\n",
-    "    low = min_val\n",
-    "    high = max_val\n",
-    "    best_imgsz = low\n",
-    "    \n",
-    "    print(f\"Starting binary search between {low} and {high}...\")\n",
-    "\n",
-    "    while low <= high:\n",
-    "        # Calculate mid point and align to stride\n",
-    "        mid = ((low + high) // 2 // stride) * stride\n",
-    "        \n",
-    "        if mid <= best_imgsz and mid != low: # Avoid infinite loops\n",
-    "            break\n",
-    "            \n",
-    "        print(f\"Testing imgsz: {mid}...\", end=\" \")\n",
-    "        \n",
-    "        try:\n",
-    "            # Clear cache before testing\n",
-    "            torch.cuda.empty_cache()\n",
-    "            \n",
-    "            # Create a dummy tensor and run a forward pass\n",
-    "            with torch.no_grad():\n",
-    "                dummy_input = torch.randn(1, 3, mid, mid).to(device)\n",
-    "                model(dummy_input)\n",
-    "            \n",
-    "            print(\"✅ Success\")\n",
-    "            best_imgsz = mid\n",
-    "            low = mid + stride\n",
-    "            \n",
-    "        except RuntimeError as e:\n",
-    "            if \"out of memory\" in str(e).lower():\n",
-    "                print(\"❌ OOM\")\n",
-    "                high = mid - stride\n",
-    "            else:\n",
-    "                # If it's a different error, raise it\n",
-    "                raise e\n",
-    "        finally:\n",
-    "            # Clean up dummy data\n",
-    "            if 'dummy_input' in locals():\n",
-    "                del dummy_input\n",
-    "                torch.cuda.empty_cache()\n",
-    "\n",
-    "    print(f\"\\nOptimization complete. Maximum stable imgsz: {best_imgsz}\")\n",
-    "    return best_imgsz\n",
-    "\n",
-    "# Example Usage:\n",
-    "# from ultralytics import YOLO\n",
-    "# model = YOLO('yolov8n.pt').to('cuda')\n",
-    "# max_size = find_max_imgsz(model, 'cuda')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "f6b2a657",
    "metadata": {},
@@ -442,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d8714431",
    "metadata": {},
    "outputs": [
@@ -454,14 +356,16 @@
       "GPU device name: NVIDIA GeForce RTX 3080 Laptop GPU\n",
       "Ultralytics 8.4.9 🚀 Python-3.13.11 torch-2.10.0+cu128 CUDA:0 (NVIDIA GeForce RTX 3080 Laptop GPU, 15992MiB)\n",
       "\n",
-      "image 1/1 /home/aubrey/Desktop/sam3-2026-01-31/20251129_152106.jpg: 1932x1932 25 coconut palm trees, 1242.6ms\n",
-      "Speed: 11.4ms preprocess, 1242.6ms inference, 5.0ms postprocess per image at shape (1, 3, 1932, 1932)\n",
+      "image 1/1 /home/aubrey/Desktop/sam3-2026-01-31/20251129_152106.jpg: 1932x1932 25 coconut palm trees, 1220.8ms\n",
+      "Speed: 11.6ms preprocess, 1220.8ms inference, 4.9ms postprocess per image at shape (1, 3, 1932, 1932)\n",
+      "Results saved to \u001b[1m/home/aubrey/Desktop/blog2026/runs/segment/predict42\u001b[0m\n",
       "deleting results from GPU memory\n",
       "building database\n",
       "Ultralytics 8.4.9 🚀 Python-3.13.11 torch-2.10.0+cu128 CUDA:0 (NVIDIA GeForce RTX 3080 Laptop GPU, 15992MiB)\n",
       "\n",
-      "image 1/1 /home/aubrey/Desktop/sam3-2026-01-31/08hs-palms-03-zglw-superJumbo.webp: 1932x1932 2 coconut palm trees, 1124.9ms\n",
-      "Speed: 13.3ms preprocess, 1124.9ms inference, 0.9ms postprocess per image at shape (1, 3, 1932, 1932)\n",
+      "image 1/1 /home/aubrey/Desktop/sam3-2026-01-31/08hs-palms-03-zglw-superJumbo.webp: 1932x1932 2 coconut palm trees, 1127.6ms\n",
+      "Speed: 12.6ms preprocess, 1127.6ms inference, 0.9ms postprocess per image at shape (1, 3, 1932, 1932)\n",
+      "Results saved to \u001b[1m/home/aubrey/Desktop/blog2026/runs/segment/predict43\u001b[0m\n",
       "deleting results from GPU memory\n",
       "building database\n",
       "FINISHED\n"
@@ -485,13 +389,10 @@
     "            text_prompts=text_prompts\n",
     "        )\n",
     "        \n",
-    "        # Move all results to CPU\n",
-    "        results_cpu = [r.cpu() for r in results_gpu]\n",
-    "        \n",
     "        # Free up GPU memory in preparation for detecting objects in the next image\n",
     "        # This is a work-around to prevent out-of-memory errors from the GPU\n",
     "        # I move all results for further processing and use the GPU only for object detection.\n",
-    "        \n",
+    "        results_cpu = [r.cpu() for r in results_gpu] # copy results to CPU\n",
     "        print('deleting results from GPU memory')       \n",
     "        delete_results_from_gpu_memory() # Clear GPU memory after processing each image\n",
     "        \n",
