--- a/visualizer.ipynb
+++ b/visualizer.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "acd980bb",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "e44c850d",
    "metadata": {},
    "outputs": [],
@@ -46,12 +46,15 @@
     "    thickness = 1\n",
     "    cv2.rectangle(img_annotated, start_point, end_point, color, thickness)\n",
     "    \n",
-    "    return img_annotated"
+    "    # Extract the region inside the rectangle\n",
+    "    roi = img_annotated[y_min:y_max+1, x_min:x_max+1]\n",
+    "    \n",
+    "    return img_annotated, roi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "4229839d",
    "metadata": {},
    "outputs": [
@@ -59,34 +62,141 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Annotating image: annotated_images//20251129_152106.jpg-00.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-01.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-02.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-03.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-04.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-05.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-06.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-07.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-08.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-09.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-10.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-11.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-12.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-13.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-14.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-15.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-16.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-17.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-18.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-19.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-20.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-21.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-22.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-23.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-24.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-25.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-26.jpg\n",
-      "Annotating image: annotated_images//20251129_152106.jpg-27.jpg\n",
+      "Annotating image: annotated_images/08hs-palms-03-zglw-superJumbo.webp-00.jpg\n",
+      "saving annotated_images/08hs-palms-03-zglw-superJumbo.webp-00.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-08hs-palms-03-zglw-superJumbo.webp-00.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/08hs-palms-03-zglw-superJumbo.webp-01.jpg\n",
+      "saving annotated_images/08hs-palms-03-zglw-superJumbo.webp-01.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-08hs-palms-03-zglw-superJumbo.webp-01.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-02.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-02.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-02.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-03.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-03.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-03.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-04.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-04.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-04.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-05.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-05.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-05.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-06.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-06.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-06.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-07.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-07.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-07.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-08.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-08.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-08.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-09.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-09.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-09.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-10.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-10.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-10.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-11.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-11.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-11.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-12.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-12.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-12.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-13.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-13.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-13.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-14.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-14.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-14.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-15.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-15.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-15.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-16.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-16.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-16.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-17.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-17.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-17.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-18.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-18.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-18.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-19.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-19.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-19.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-20.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-20.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-20.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-21.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-21.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-21.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-22.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-22.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-22.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-23.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-23.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-23.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-24.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-24.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-24.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-25.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-25.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-25.jpg\n",
+      "True\n",
+      "Annotating image: annotated_images/20251129_152106.jpg-26.jpg\n",
+      "saving annotated_images/20251129_152106.jpg-26.jpg\n",
+      "True\n",
+      "saving annotated_images/roi-20251129_152106.jpg-26.jpg\n",
+      "True\n",
       "FINISHED\n"
      ]
     }
@@ -95,7 +205,7 @@
     "# Set variables for this run\n",
     "database_path = 'sam3_detections.sqlite3'\n",
     "sql = 'select * from detections order by image_path, confidence desc;'\n",
-    "annotated_image_dir = 'annotated_images/'\n",
+    "annotated_image_dir = 'annotated_images'\n",
     "\n",
     "# Ensure existence of output directory\n",
     "os.makedirs(annotated_image_dir, exist_ok=True)\n",
@@ -118,9 +228,13 @@
     "    polygon_points = [polygon_points.reshape((-1, 1, 2))]\n",
     "    color = (0, 0, 255)  # Red color in BGR\n",
     "    annotated_image_path = f'{annotated_image_dir}/{original_image_path}-{i:02d}.jpg' \n",
+    "    roi_image_path = f'{annotated_image_dir}/roi-{original_image_path}-{i:02d}.jpg' \n",
     "    print(f'Annotating image: {annotated_image_path}')   \n",
-    "    img_annotated = annotate_image_with_polygon_and_rectangle(original_image_path, x_min, y_min, x_max, y_max, polygon_points, color)\n",
-    "    cv2.imwrite(annotated_image_path, img_annotated)\n",
+    "    img_annotated, roi = annotate_image_with_polygon_and_rectangle(original_image_path, x_min, y_min, x_max, y_max, polygon_points, color)\n",
+    "    print(f'saving {annotated_image_path}')\n",
+    "    print(cv2.imwrite(annotated_image_path, img_annotated))\n",
+    "    print(f'saving {roi_image_path}')\n",
+    "    print(cv2.imwrite(roi_image_path, roi))\n",
     "    \n",
     "    # Write .txt file describing the annotated image. May be used in a caption later.\n",
     "    txt_path = f'{annotated_image_path}.txt'\n",
@@ -128,6 +242,27 @@
     "        f.write(f'confidence: {r[\"confidence\"]:.3f} object_index: {r[\"object_index\"]}\\n')\n",
     "    \n",
     "print('FINISHED')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8c2ac4df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv2.imwrite('roi.jpg', roi)"
    ]
   }
  ],
