--- a/efd.ipynb
+++ b/efd.ipynb
@@ -23,6 +23,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "47ac9849",
+   "metadata": {},
+   "source": [
+    "# FUNCTIONS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "36ca9198",
@@ -152,128 +160,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "35111353",
+   "cell_type": "markdown",
+   "id": "d43138e9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>image_path</th>\n",
-       "      <th>object_index</th>\n",
-       "      <th>class_id_x</th>\n",
-       "      <th>polygon_points_str</th>\n",
-       "      <th>x_min</th>\n",
-       "      <th>y_min</th>\n",
-       "      <th>x_max</th>\n",
-       "      <th>y_max</th>\n",
-       "      <th>confidence</th>\n",
-       "      <th>class_id_y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>08hs-palms-03-zglw-superJumbo.webp</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>[486.0, 679.0],[486.0, 684.0],[485.0, 685.0],[...</td>\n",
-       "      <td>354.5</td>\n",
-       "      <td>683.500</td>\n",
-       "      <td>593.5</td>\n",
-       "      <td>2068.0</td>\n",
-       "      <td>0.928711</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>08hs-palms-03-zglw-superJumbo.webp</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>[1035.0, 1274.0],[1035.0, 1276.0],[1034.0, 127...</td>\n",
-       "      <td>701.0</td>\n",
-       "      <td>1273.000</td>\n",
-       "      <td>1103.0</td>\n",
-       "      <td>2066.0</td>\n",
-       "      <td>0.920898</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>20251129_152106.jpg</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>[1154.0, 233.0],[1153.0, 234.0],[1151.0, 234.0...</td>\n",
-       "      <td>939.5</td>\n",
-       "      <td>232.875</td>\n",
-       "      <td>1329.0</td>\n",
-       "      <td>997.5</td>\n",
-       "      <td>0.842285</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>20251129_152106.jpg</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>[1681.0, 715.0],[1680.0, 716.0],[1680.0, 717.0...</td>\n",
-       "      <td>1592.0</td>\n",
-       "      <td>715.500</td>\n",
-       "      <td>1778.0</td>\n",
-       "      <td>905.5</td>\n",
-       "      <td>0.771484</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                           image_path  object_index  class_id_x  \\\n",
-       "0  08hs-palms-03-zglw-superJumbo.webp             1         0.0   \n",
-       "1  08hs-palms-03-zglw-superJumbo.webp             0         0.0   \n",
-       "2                 20251129_152106.jpg            16         0.0   \n",
-       "3                 20251129_152106.jpg             5         0.0   \n",
-       "\n",
-       "                                  polygon_points_str   x_min     y_min  \\\n",
-       "0  [486.0, 679.0],[486.0, 684.0],[485.0, 685.0],[...   354.5   683.500   \n",
-       "1  [1035.0, 1274.0],[1035.0, 1276.0],[1034.0, 127...   701.0  1273.000   \n",
-       "2  [1154.0, 233.0],[1153.0, 234.0],[1151.0, 234.0...   939.5   232.875   \n",
-       "3  [1681.0, 715.0],[1680.0, 716.0],[1680.0, 717.0...  1592.0   715.500   \n",
-       "\n",
-       "    x_max   y_max  confidence  class_id_y  \n",
-       "0   593.5  2068.0    0.928711         0.0  \n",
-       "1  1103.0  2066.0    0.920898         0.0  \n",
-       "2  1329.0   997.5    0.842285         0.0  \n",
-       "3  1778.0   905.5    0.771484         0.0  "
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df"
+    "# MAIN"
    ]
   },
   {
