--- a/2026-02-14.ipynb
+++ b/2026-02-14.ipynb
@@ -12,10 +12,10 @@
     "## TODO\n",
     "\n",
     "- [] move `delete_results_from_gpu_memory()` function to `roadside.py`\n",
-    "- [] move `populate_detections_table` function to `roadside.py`\n",
+    "- [x] move `get_data_for_images_table` function to `roadside.py`\n",
+    "- [x] move `get_data_for_detections_table` function to `roadside.py`\n",
     "- [x] remove detection attribute fields from schema\n",
-    "- [] populate fields in `images` table\n",
-    "- [] prevent duplication of records in database"
+    "- [x] prevent duplication of records in database"
    ]
   },
   {
@@ -28,7 +28,8 @@
     "import roadside as rs\n",
     "import sqlite3\n",
     "import os\n",
-    "from icecream import ic"
+    "from icecream import ic\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -49,6 +50,9 @@
     "root_dir = \"/home/aubrey/Desktop/sam3-2026-01-31\"\n",
     "image_paths = [\"20251129_152106.jpg\", \"08hs-palms-03-zglw-superJumbo.webp\" ]\n",
     "text_prompts=[\"coconut palm tree\"]\n",
+    "\n",
+    "# SQLite3 database\n",
+    "delete_database_before_run = False # normally False; change to True to rebuild db during testing\n",
     "db_path = 'sam3_detections.sqlite3'\n",
     "schema_sql = \"\"\"\n",
     "--- 2026-02-14 07:32\n",
@@ -121,36 +125,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a99a1cbf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "raw",
    "id": "8d88a1d7",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "import pandas as pd\n",
     "import exif\n",
     "\n",
-    "def get_data_for_images_table(results_cpu) -> pd.DataFrame:\n",
+    "def get_data_for_images_table(results_cpu) -> tuple:\n",
     "    \"\"\" \n",
-    "    Saves data for a single image into an 'images' table in a SQLite database. \n",
-    "    If the image contains embedded EXIF metadata, GIS coordinates are extracted and saved. and saves it in a SQLite database.\n",
-    "    If the database exists, one record is appended. Otherwise, a new database is created before adding the record.\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "    Args:\n",
-    "        image_path (str): Path to the image file.\n",
-    "        db_path (str): Path to the SQLite database file.\n",
-    "    Returns:\n",
-    "        None\n",
+    "    Gets data for for a single image for insertion as a record in the 'images' database table. \n",
+    "    Returns data as a tuple: (image_width, image_height, timestamp, latitude, longitude)\n",
+    "    image_width and image_height come from results_cpu\n",
+    "    timestamp, latitude, longitude come from the EXIF metadata embedded in the image, if it exists. \n",
     "    \"\"\"\n",
     "\n",
     "    image_height = results_cpu[0].orig_shape[0]\n",
@@ -192,37 +183,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "raw",
    "id": "b360da48",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "import pandas as pd\n",
     "\n",
-    "def get_data_for_detections_table(results_cpu, image_id):\n",
+    "def get_data_for_detections_table(results_cpu, image_id:int)->pd.DataFrame:\n",
+    "    \"\"\" \n",
+    "    Gets data for for a single image for insertion as records in the 'detections' database table. \n",
+    "    Returns data as a pandas dataframe containing columns for image_id, class_id, poly_wkt, x_min, y_min, x_max, y_max, confidence\n",
+    "    \"\"\"\n",
     "\n",
     "    # Process detection results (assuming one image for simplicity: results[0])\n",
     "    result = results_cpu[0]\n",
     "\n",
-    "    # --- Extract Bounding Box Data into a DataFrame ---\n",
-    "    # The .boxes.data attribute is a tensor containing [x_min, y_min, x_max, y_max, confidence, class]\n",
+    "    # create a pandas dataframe for bounding boxes\n",
     "    boxes_data = result.boxes.data.tolist()\n",
     "    df_boxes = pd.DataFrame(boxes_data, columns=['x_min', 'y_min', 'x_max', 'y_max', 'confidence', 'class_id'])\n",
     "\n",
-    "    # Add class names for readability\n",
-    "    # class_names = model.names\n",
-    "    # df_boxes['class_name'] = df_boxes['class_id'].apply(lambda x: class_names[int(x)])\n",
-    "\n",
-    "    # --- Extract Segmentation Mask Data ---\n",
-    "    # Masks are more complex as they represent pixel-wise information or polygon points.\n",
-    "    # To put this into a DataFrame, you could store the polygon points list for each object.\n",
+    "    # create a pandas dataframe for segmentation masks (polygons)\n",
     "    masks_data = []\n",
     "    # Iterate over each detected object's mask\n",
     "    for i, mask in enumerate(result.masks.xy):\n",
-    "        # mask.xy contains the polygon points as a list of [x, y] coordinates\n",
-    "        # You can associate this with the corresponding entry in the bounding box DataFrame\n",
-    "\n",
     "        poly_arr = mask\n",
     "        poly_wkt = rs.conv_poly_from_array_to_wkt(poly_arr)\n",
     "\n",
@@ -244,15 +231,13 @@
     "\n",
     "    return df_detections\n",
     "\n",
-    "# populate_detections_table(results_cpu, image_id)    \n",
-    "    \n",
-    "    \n",
-    "\n",
-    "    # # Connect to the SQLite database (creates if it doesn't exist)\n",
-    "    # conn = sqlite3.connect(db_path)\n",
-    "    # # cursor = conn.cursor()\n",
-    "    # df_detections.to_sql(name='detections', con=conn, if_exists='append', index=False)\n",
-    "    # conn.close()\n"
+    "# image_path = image_paths[0]\n",
+    "# results_gpu = rs.run_sam3_semantic_predictor(input_image_path=image_path, text_prompts=text_prompts)\n",
+    "# results_cpu = [r.cpu() for r in results_gpu] # copy results to CPU\n",
+    "# delete_results_from_gpu_memory() # Clear GPU memory after processing each image\n",
+    "# get_data_for_images_table(results_cpu)\n",
+    "# fake_image_id = 999\n",
+    "# get_data_for_detections_table(results_cpu, image_id=fake_image_id)    "
    ]
   },
   {
@@ -265,19 +250,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "3f9bf397",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# delete database\n",
-    "if os.path.exists(db_path):\n",
+    "if delete_database_before_run and os.path.exists(db_path):\n",
     "    os.remove(db_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "97ff53fa",
    "metadata": {},
    "outputs": [
@@ -296,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "05a97164",
    "metadata": {},
    "outputs": [],
@@ -310,29 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "39816421",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "image_path = image_paths[0]\n",
-    "con.execute(f'SELECT COUNT(*) FROM images WHERE  image_path = \"{image_path}\"').fetchone()[0] > 0\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "571e55e5",
    "metadata": {},
    "outputs": [
@@ -340,46 +302,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ultralytics 8.4.9 🚀 Python-3.13.11 torch-2.10.0+cu128 CUDA:0 (NVIDIA GeForce RTX 3080 Laptop GPU, 15992MiB)\n",
-      "\n",
-      "image 1/1 /home/aubrey/Desktop/sam3-2026-01-31/20251129_152106.jpg: 1932x1932 25 coconut palm trees, 1230.5ms\n",
-      "Speed: 14.4ms preprocess, 1230.5ms inference, 5.7ms postprocess per image at shape (1, 3, 1932, 1932)\n",
-      "Results saved to \u001b[1m/home/aubrey/Desktop/blog2026/runs/segment/predict145\u001b[0m\n",
-      "deleting results from GPU memory\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[38;5;247mic\u001b[39m\u001b[38;5;245m|\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;247mparameters\u001b[39m\u001b[38;5;245m:\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;245m(\u001b[39m\u001b[38;5;36m'\u001b[39m\u001b[38;5;36m20251129_152106.jpg\u001b[39m\u001b[38;5;36m'\u001b[39m\u001b[38;5;245m,\u001b[39m\n",
-      "\u001b[38;5;245m                 \u001b[39m\u001b[38;5;36m1920\u001b[39m\u001b[38;5;245m,\u001b[39m\n",
-      "\u001b[38;5;245m                 \u001b[39m\u001b[38;5;36m1080\u001b[39m\u001b[38;5;245m,\u001b[39m\n",
-      "\u001b[38;5;245m                 \u001b[39m\u001b[38;5;36m'\u001b[39m\u001b[38;5;36m2025:11:29 15:21:06\u001b[39m\u001b[38;5;36m'\u001b[39m\u001b[38;5;245m,\u001b[39m\n",
-      "\u001b[38;5;245m                 \u001b[39m\u001b[38;5;245m-\u001b[39m\u001b[38;5;36m17.73039628333333\u001b[39m\u001b[38;5;245m,\u001b[39m\n",
-      "\u001b[38;5;245m                 \u001b[39m\u001b[38;5;36m168.18940991666668\u001b[39m\u001b[38;5;245m)\u001b[39m\n",
-      "\u001b[38;5;247mic\u001b[39m\u001b[38;5;245m|\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;247mimage_id\u001b[39m\u001b[38;5;245m:\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;36m1\u001b[39m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ultralytics 8.4.9 🚀 Python-3.13.11 torch-2.10.0+cu128 CUDA:0 (NVIDIA GeForce RTX 3080 Laptop GPU, 15992MiB)\n",
-      "\n",
-      "image 1/1 /home/aubrey/Desktop/sam3-2026-01-31/08hs-palms-03-zglw-superJumbo.webp: 1932x1932 2 coconut palm trees, 1134.4ms\n",
-      "Speed: 14.4ms preprocess, 1134.4ms inference, 1.0ms postprocess per image at shape (1, 3, 1932, 1932)\n",
-      "Results saved to \u001b[1m/home/aubrey/Desktop/blog2026/runs/segment/predict146\u001b[0m\n",
-      "deleting results from GPU memory\n",
+      "WARNING: Image 20251129_152106.jpg is already in the database. Skipping to next image.\n",
+      "WARNING: Image 08hs-palms-03-zglw-superJumbo.webp is already in the database. Skipping to next image.\n",
       "FINISHED\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[38;5;247mic\u001b[39m\u001b[38;5;245m|\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;247mparameters\u001b[39m\u001b[38;5;245m:\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;245m(\u001b[39m\u001b[38;5;36m'\u001b[39m\u001b[38;5;36m08hs-palms-03-zglw-superJumbo.webp\u001b[39m\u001b[38;5;36m'\u001b[39m\u001b[38;5;245m,\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;36m1366\u001b[39m\u001b[38;5;245m,\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;36m2048\u001b[39m\u001b[38;5;245m,\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;100mNone\u001b[39m\u001b[38;5;245m,\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;100mNone\u001b[39m\u001b[38;5;245m,\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;100mNone\u001b[39m\u001b[38;5;245m)\u001b[39m\n",
-      "\u001b[38;5;247mic\u001b[39m\u001b[38;5;245m|\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;247mimage_id\u001b[39m\u001b[38;5;245m:\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;36m2\u001b[39m\n"
      ]
     }
    ],
@@ -402,7 +327,7 @@
     "    delete_results_from_gpu_memory() # Clear GPU memory after processing each image\n",
     "    \n",
     "    # populate 'images' table\n",
-    "    image_width, image_height, timestamp, latitude, longitude = get_data_for_images_table(results_cpu)\n",
+    "    image_width, image_height, timestamp, latitude, longitude = rs.get_data_for_images_table(results_cpu, image_path)\n",
     "    sql = \"\"\"\n",
     "    INSERT INTO images (image_path, image_width, image_height, timestamp, latitude, longitude) \n",
     "    VALUES (?,?,?,?,?,?)\n",
@@ -421,7 +346,8 @@
     "    ic(image_id)\n",
     "    \n",
     "    # populate 'detections' table\n",
-    "    df_detections = get_data_for_detections_table(results_cpu, image_id)\n",
+    "    # df_detections = rs.get_data_for_detections_table(results_cpu, image_id)\n",
+    "    df_detections = rs.get_data_for_detections_table(results_cpu, image_id)\n",
     "    for i, r in df_detections.iterrows():\n",
     "            # populate 'detections' table\n",
     "        sql = ''' \n",
@@ -453,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "9d0818fb",
    "metadata": {},
    "outputs": [
@@ -522,7 +448,7 @@
        "1                  NaN        NaN        NaN  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "49a2ac8d",
    "metadata": {},
    "outputs": [
@@ -988,7 +914,7 @@
        "26  2068.0    0.928711  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "386d13ef",
    "metadata": {},
    "outputs": [],
